--- a/eDnevnik.UI/eDnevnik.UI.csproj
+++ b/eDnevnik.UI/eDnevnik.UI.csproj
@@ -54,11 +54,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="DodajCasForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="DodajCasForm.Designer.cs">
+      <DependentUpon>DodajCasForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DodajIzostanakForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DodajIzostanakForm.Designer.cs">
+      <DependentUpon>DodajIzostanakForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Global.cs" />
     <Compile Include="LoginForm.cs">
@@ -76,8 +82,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\WebAPIHelper.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="DodajCasForm.resx">
+      <DependentUpon>DodajCasForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DodajIzostanakForm.resx">
+      <DependentUpon>DodajIzostanakForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
