--- a/eDnevnik.API/eDnevnik.API.csproj
+++ b/eDnevnik.API/eDnevnik.API.csproj
@@ -108,7 +108,10 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CasoviController.cs" />
     <Compile Include="Controllers\NastavniciController.cs" />
+    <Compile Include="Controllers\ObavijestiController.cs" />
+    <Compile Include="Controllers\OcjeneController.cs" />
     <Compile Include="Controllers\PredmetiController.cs" />
+    <Compile Include="Controllers\PrisustvoController.cs" />
     <Compile Include="Controllers\UceniciController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -120,9 +123,6 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\CasVM.cs" />
-    <Compile Include="Models\Izostanak.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\Korisnik.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -145,24 +145,35 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\NastavnikVM.cs" />
+    <Compile Include="Models\Obavijest.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ObavijestVM.cs" />
     <Compile Include="Models\Ocjena.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\OcjenaVM.cs" />
     <Compile Include="Models\Predmet.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PredmetVM.cs" />
+    <Compile Include="Models\Prisustvo.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\PrisustvoVM.cs" />
     <Compile Include="Models\Razred.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\sysdiagrams.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UceniciWrapper.cs" />
     <Compile Include="Models\Ucenik.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\UcenikVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\ExceptionHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
