--- a/eDnevnik.API/Web.config
+++ b/eDnevnik.API/Web.config
@@ -15,13 +15,24 @@
   </system.web>
   <system.webServer>
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <!--<remove name="ExtensionlessUrlHandler-Integrated-4.0" />-->
+      <!--<remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />-->
+      <!--<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />-->
+      
+      <remove name="WebDAV" />
+      <remove name="ExtensionlessUrl-Integrated-4.0" />
+      <add name="ExtensionlessUrl-Integrated-4.0"
+           path="*."
+           verb="GET,HEAD,POST,DEBUG,DELETE,PUT"
+           type="System.Web.Handlers.TransferRequestHandler"
+           preCondition="integratedMode,runtimeVersionv4.0" />
+    
     </handlers>
 
-    <modules runAllManagedModulesForAllRequests="true" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule"/>
+    </modules>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
