--- a/eDnevnik.API/eDnevnik.API.csproj
+++ b/eDnevnik.API/eDnevnik.API.csproj
@@ -106,12 +106,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AkademskeGodineController.cs" />
     <Compile Include="Controllers\CasoviController.cs" />
     <Compile Include="Controllers\NastavniciController.cs" />
     <Compile Include="Controllers\ObavijestiController.cs" />
     <Compile Include="Controllers\OcjeneController.cs" />
     <Compile Include="Controllers\PredmetiController.cs" />
     <Compile Include="Controllers\PrisustvoController.cs" />
+    <Compile Include="Controllers\RazrediController.cs" />
     <Compile Include="Controllers\UceniciController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -119,6 +121,7 @@
     <Compile Include="Models\AkademskaGodina.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\AkademskaGodinaVM.cs" />
     <Compile Include="Models\Cas.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -164,6 +167,7 @@
     <Compile Include="Models\Razred.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RazredVM.cs" />
     <Compile Include="Models\sysdiagrams.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
