--- a/eDnevnik.API/eDnevnik.API.csproj
+++ b/eDnevnik.API/eDnevnik.API.csproj
@@ -108,8 +108,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AkademskeGodineController.cs" />
+    <Compile Include="Controllers\OcjeneMaterijalController.cs" />
+    <Compile Include="Controllers\RazrediController.cs" />
     <Compile Include="Controllers\CasoviController.cs" />
     <Compile Include="Controllers\NastavniciController.cs" />
+    <Compile Include="Controllers\MaterijaliController.cs" />
     <Compile Include="Controllers\ObavijestiController.cs" />
     <Compile Include="Controllers\OcjeneController.cs" />
     <Compile Include="Controllers\PredmetiController.cs" />
@@ -124,10 +128,15 @@
     <Compile Include="Models\Cas.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\AkademskaGodinaVM.cs" />
     <Compile Include="Models\CasVM.cs" />
     <Compile Include="Models\Korisnik.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Materijal.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\MaterijalVM.cs" />
     <Compile Include="Models\Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -154,6 +163,10 @@
     <Compile Include="Models\Ocjena.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\OcjenaMaterijal.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\OcjenaMaterijalVM.cs" />
     <Compile Include="Models\OcjenaVM.cs" />
     <Compile Include="Models\Predmet.cs">
       <DependentUpon>Model.tt</DependentUpon>
@@ -166,13 +179,19 @@
     <Compile Include="Models\Razred.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RazredVM.cs" />
+    <Compile Include="Models\sysdiagrams.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\UceniciWrapper.cs" />
     <Compile Include="Models\Ucenik.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\UcenikVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\ExceptionFilter.cs" />
     <Compile Include="Util\ExceptionHandler.cs" />
+    <Compile Include="Util\Recommender.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
