--- a/eDnevnik.UI/packages.config
+++ b/eDnevnik.UI/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="140.340.80" targetFramework="net452" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
 </packages>
