--- a/eDnevnik.MOBILE/eDnevnik.MOBILE.UWP/project.json
+++ b/eDnevnik.MOBILE/eDnevnik.MOBILE.UWP/project.json
@@ -3,10 +3,11 @@
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Newtonsoft.Json": "10.0.3",
     "PCLCrypto": "2.0.147",
+    "PCLStorage": "1.0.2",
     "Xamarin.Forms": "2.3.4.224"
   },
   "frameworks": {
-    "uap10.0": {}
+    "uap10.0.10586": {}
   },
   "runtimes": {
     "win10-arm": {},
