--- a/eDnevnik.PCL/packages.config
+++ b/eDnevnik.PCL/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable46-net451+win81" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="portable46-net451+win81" />
+  <package id="PCLStorage" version="1.0.2" targetFramework="portable46-net451+win81" />
   <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="portable46-net451+win81" />
   <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="portable46-net451+win81" />
   <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="portable46-net451+win81" />
