--- a/eDnevnik.API/eDnevnik.API.csproj
+++ b/eDnevnik.API/eDnevnik.API.csproj
@@ -174,6 +174,7 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PredmetVM.cs" />
+    <Compile Include="Models\PreporuceniMaterijaliVM.cs" />
     <Compile Include="Models\Prisustvo.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
