--- a/eDnevnik.PCL/eDnevnik.PCL.csproj
+++ b/eDnevnik.PCL/eDnevnik.PCL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Model\OcjenaTemp.cs" />
     <Compile Include="Model\OcjenaVM.cs" />
     <Compile Include="Model\PredmetVM.cs" />
+    <Compile Include="Model\PreporuceniMaterijaliVM.cs" />
     <Compile Include="Model\PrisustvoVM.cs" />
     <Compile Include="Model\RasporedCasovaVM.cs" />
     <Compile Include="Model\UcenikVM.cs" />
@@ -93,6 +94,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\ednevnik.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
